--- a/gradle/test.gradle
+++ b/gradle/test.gradle
@@ -10,6 +10,7 @@ jacocoTestReport {
     reports {
         xml.enabled = true
         html.enabled = true
+        html.destination "${buildDir}/jacoco/html"
     }
 }
 
