--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group = eu.hexagonmc
-version = 1.0-SNAPSHOT
+version = 1.1-SNAPSHOT
 description = Annotation processor for Spigot- and BungeeCord-Plugins
 
 github = HexagonMC/Spigot-Annotations
@@ -11,12 +11,12 @@ year = 2017
 
 # Dependency versions
 version_java = 8
-version_gradle = 3.3
-version_guava = 20.0
-version_snakeyaml = 1.18
+version_gradle = 4.10.2
+version_guava = 26.0-jre
+version_snakeyaml = 1.23
 version_junit = 4.12
-version_compiletesting = 0.10
-version_truth = 0.31
+version_compiletesting = 0.15
+version_truth = 0.42
 
-version_spigot = 1.11-R0.1
-version_bungeecord = 1.11
+version_spigot = 1.13.1-R0.1
+version_bungeecord = 1.13
